# SimpleBowl

./: CMakeLists.txt  README.md  main.cpp
doc/: temp.txt
include/: Contract.hpp  Game.hpp  Round.hpp  SimpleBowlException.hpp
src/: CMakeLists.txt  Contract.cpp  Game.cpp  Round.cpp  SimpleBowlException.cpp
